# Artemix

./: README.md  docker-compose.dev.yaml
artemix-db/: docker-compose.yaml
artemix-db/db-data/: hello.txt
artemix-db/db-data/db/: _tab_index.d
artemix-db/db-data/db/telemetry/: _txn  _txn_scoreboard
artemix-db/db-data/db/telemetry/2025-02-18/: created.d  event.d  origin.d
artemix-db/db-data/db/telemetry_config/: _meta  version.c  version.k
artemix-db/db-data/db/telemetry_config/default/: id.d
artemix-db/db-data/public/: index.html  qdb.65558.js  vendor.ecae3.js  vendor.ecae3.js.LICENSE.txt
artemix-ui/: Cargo.toml
examples/iss-telem/: Dockerfile  docker-compose.yaml  pyproject.toml
examples/iss-telem/src/: iss_telem_ingester.py
